Updates css for item width responsiveness: avoids squishing

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -507,6 +507,17 @@ ul {
   display:none;
 }
 
+@media (max-width: 1563px){
+    div.content{
+      width:95%;
+    }
+}
+
+@media (max-width: 1200px){
+    div.content{
+      width:90%;
+    }
+}
 
 /* Responsive Design. *//* Responsive Design. *//* Responsive Design. *//* Responsive Design. *//* Responsive Design. */
 //smaller browser window or large tablet
